--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 #innercircle {
 	position: relative;
 	display: block;
-	text-indent: -9999px
+	text-indent: -9999px;
 	background-color: black;
 	width: 26px;
 	height: 26px;
