--- a/style.css
+++ b/style.css
@@ -24,9 +24,7 @@ body {
 
 #circle {
 	position: relative;
-	margin-left: 52px;
-	margin-top: 35px;
-	margin-bottom: 20px;
+	margin: 35px 0px 20px 52px;
 	background-color: black;
 	border-radius: 100px;
 	height: 42px;
